--- a/src/Volvox.Helios.Web/Views/Remembot/EditRecurringReminder.cshtml
+++ b/src/Volvox.Helios.Web/Views/Remembot/EditRecurringReminder.cshtml
@@ -32,13 +32,13 @@
         </div>
         <div class="col-md-3 valign">
             <div class="btn-group material-btn-group ml-md-auto mt-md-0 mt-3 mr-3">
-                <label for="enabledBtn" class="btn pr-4 pl-4 @(Model.Enabled ? "active" : "border-gray2 bg-white text-gray2")">
+                <label for="enabledBtn" class="btn pr-4 pl-4 module-enabler @(Model.Enabled ? "active" : "disabled")">
                     On
-                    <input id="enabledBtn" type="radio" name="Enabled" class="d-none" value="true">
+                    <input id="enabledBtn" type="radio" name="Enabled" class="d-none" value="true" @(Model.Enabled ? "checked" : "")>
                 </label>
-                <label for="disabledBtn" class="btn pr-4 pl-4 @(Model.Enabled ? "border-gray2 bg-white text-gray2" : "active")">
+                <label for="disabledBtn" class="btn pr-4 pl-4 module-enabler @(Model.Enabled ? "disabled" : "active")">
                     Off
-                    <input id="disabledBtn" type="radio" name="Enabled" class="d-none" value="false">
+                    <input id="disabledBtn" type="radio" name="Enabled" class="d-none" value="false" @(Model.Enabled ? "" : "checked")>
                 </label>
             </div>
         </div>
@@ -52,7 +52,7 @@
             <label asp-for="Message" class="control-label mt-3"></label>
             <div id="textBox"></div>
             <span asp-validation-for="Message" class="text-danger"></span>
-            <input type="hidden" name="Message" />
+            <textarea type="text" name="Message" class="d-none"></textarea>
             <div id="easy_cron" class="mt-3"></div>
 
             <div id="manual_cron" style="display:none">
@@ -74,27 +74,7 @@
     </div>
 
     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-
-    @*<div class="form-row">
-            <div class="col-4">
-                <div class="form-group">
-                    <label asp-for="ChannelId"></label>
-                    <select asp-for="ChannelId" asp-items="Model.Channels" id="channels" class="form-control"></select>
-                    <span asp-validation-for="ChannelId" class="text-danger"></span>
-                </div>
-            </div>
-        </div>*@
-
-    @*<div class="form-row">
-            <div class="col-12">
-                <div class="form-group">
-                    <label asp-for="Message" class="control-label"></label>
-                    <textarea asp-for="Message" rows="5" class="form-control"></textarea>
-                    <span asp-validation-for="Message" class="text-danger"></span>
-                </div>
-            </div>
-        </div>*@
-    
+        
     <div class="row mt-4">
         <div class="ml-auto">
             <button type="submit" class="btn btn-volvox-outline pr-4 pl-4" style="border-radius:20px;">Save Reminder</button>
@@ -134,37 +114,40 @@
     </environment>
 
     <script type="text/javascript">
+        var selectChannelVal = '@Model.ChannelId';
+        if (selectChannelVal == '0')
+            selectChannelVal = '@Model.Channels.FirstOrDefault().Value';
         $("#selectBox").dxSelectBox({
             dataSource: JSON.parse('@(Html.Raw(Json.Serialize(Model.Channels)))'),
             valueExpr: "value",
             displayExpr: "text",
             searchEnabled: true,
-            value: '@Model.ChannelId',
+            value: selectChannelVal,
             onInitialized: (e) => {
-                $('input[name="ChannelId"]').val('@Model.ChannelId');
+                $('input[name="ChannelId"]').val(selectChannelVal);
             },
             onValueChanged: (e) => {
                 $('input[name="ChannelId"]').val(e.value);
             }
         });
-        $("#textBox").dxTextArea({
-            height: 250,
-            value: '@Model.Message',
-            onInitialized: (e) => {
-                $('input[name="Message"]').val('@Model.Message');
-            },
-            onValueChanged: (e) => {
-                $('input[name="Message"]').val(e.value.replaceAll('\n', '<br>'));
-            }
-        });
-        $('input:not(".active")').click((e) => {
-            $(e.currentTarget).parent().parent().find('.active').toggleClass('active border-gray2 bg-white text-gray2');
-            $(e.currentTarget).parent().toggleClass('active border-gray2 bg-white text-gray2');
-        });
         String.prototype.replaceAll = function (search, replacement) {
             var target = this;
             return target.replace(new RegExp(search, 'g'), replacement);
         };
+        $("#textBox").dxTextArea({
+            height: 250,
+            value: '@Model.Message'.replaceAll('&lt;br&gt;', '\n'),
+            onInitialized: (e) => {
+                $('textarea[name="Message"]').html('@Model.Message');
+            },
+            onValueChanged: (e) => {
+                $('textarea[name="Message"]').html(e.value.replaceAll('\n', '<br>'));
+            }
+        });
+        $('.module-enabler input:not(".active")').click((e) => {
+            $(e.currentTarget).parent().parent().find('.active').toggleClass('active disabled');
+            $(e.currentTarget).parent().toggleClass('active disabled');
+        });
         $(document).ready(function () {
             var faultType = @Model.FaultType;
             var cronExpression = $("#CronExpression").val();
