--- a/src/Volvox.Helios.Web/Views/Settings/StreamerSettings.cshtml
+++ b/src/Volvox.Helios.Web/Views/Settings/StreamerSettings.cshtml
@@ -185,8 +185,8 @@
             });*@
 
         
-        var selectChannelVal = @Model.ChannelId;
-        if (selectChannelVal == 0)
+        var selectChannelVal = '@Model.ChannelId';
+        if (selectChannelVal == '0')
             selectChannelVal = '@Model.Channels.FirstOrDefault().Value';
         $('#selectChannel').dxSelectBox({
             dataSource: JSON.parse('@(Html.Raw(Json.Serialize(Model.Channels)))'),
