optimized remembot time select dialog for dark mode

--- a/src/Volvox.Helios.Web/wwwroot/css/dark-theme.css
+++ b/src/Volvox.Helios.Web/wwwroot/css/dark-theme.css
@@ -75,6 +75,10 @@ hr{
   color: var(--color-gray2) !important;
 }
 
+.gentleselect-dialog {
+  background: var(--color-deep-dark) !important;
+}
+
 footer {
   background: var(--color-deep-dark);
 }
