Add min files to gitignore Add version variable

--- a/src/Volvox.Helios.Web/Views/Shared/_Layout.cshtml
+++ b/src/Volvox.Helios.Web/Views/Shared/_Layout.cshtml
@@ -109,7 +109,8 @@
                 </div>
                 <hr class="border-volvox col-md-6 mt-4">
                 <p class="mb-0 text-center">
-                    &copy; 2018 - Volvox.Helios v@(Assembly.GetEntryAssembly().GetName().Version.Major).@(Assembly.GetEntryAssembly().GetName().Version.Minor).@(Assembly.GetEntryAssembly().GetName().Version.Build)
+                    @{ var version = Assembly.GetEntryAssembly().GetName().Version; }
+                    &copy; 2018 - Volvox.Helios v@(version.Major).@(version.Minor).@(version.Build)
                 </p>
             </div>
         </footer>
