--- a/src/Volvox.Helios.Web/wwwroot/css/dark-theme.css
+++ b/src/Volvox.Helios.Web/wwwroot/css/dark-theme.css
@@ -40,10 +40,28 @@ hr{
   color: var(--color-gray);
 }
 .dx-overlay-content.dx-popup-normal .dx-item.dx-list-item.dx-list-item-selected {
-  background: var(--color-gray2);
+  background: var(--color-deep-dark);
 }
+.dx-overlay-content.dx-popup-normal .dx-item.dx-list-item.dx-list-item-selected.dx-state-hover{
+  background: var(--color-gray2)
+}
+
 .dx-overlay-content.dx-popup-normal .dx-item.dx-list-item.dx-state-hover {
   background: var(--color-volvox);
+}
+
+.dx-datagrid{
+  background-color: var(--color-deep-dark);
+  color: var(--color-gray);
+}
+.dx-datagrid-headers {
+  border-bottom: inherit;
+}
+.dx-datagrid-headers, .dx-datagrid-rowsview {
+  border-color: var(--color-dark2) !important;
+}
+.dx-datagrid .dx-column-lines > td {
+  border-color: var(--color-dark2);
 }
 
 .module-enabler.disabled {
@@ -77,6 +95,14 @@ hr{
 
 .gentleselect-dialog {
   background: var(--color-deep-dark) !important;
+}
+
+.border-gray2{
+  border-color: var(--color-dark2) !important
+}
+
+.gentleselect-label {
+  color: white !important;
 }
 
 footer {
