--- a/src/Volvox.Helios.Web/Views/Settings/StreamerSettings.cshtml
+++ b/src/Volvox.Helios.Web/Views/Settings/StreamerSettings.cshtml
@@ -10,7 +10,26 @@
     <div class="col-md-12">
         <form method="post">
             <div class="col-12">
-                <div class="row border border-gray2 rounded">
+
+                <div class="row border border-gray2 rounded sliding-border">
+                    <div class="col-md-9 pt-3 pb-3">
+                        <h4 class="mb-0">Information and Instructions</h4>
+                    </div>
+                    <div class="col-md-3 valign">
+                        <div class="btn-group material-btn-group ml-md-auto mt-md-0 mt-3">
+                            <a href="#infoCollapse" class="text-light" data-toggle="collapse" data-animation="sliding-border" role="button" aria-expanded="false" aria-controls="infoCollapse">
+                                <i class="fas fa-info-circle" style="font-size: 20px;cursor:pointer;"></i>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="col-12 collapse" id="infoCollapse">
+                        <p>
+                            
+                        </p>
+                    </div>
+                </div>
+
+                <div class="row border border-gray2 rounded mt-4">
                     <div class="col-md-9 pt-3 pb-3">
                         <h4>Streamer Module</h4>
                         <p class="mb-0 text-volvox">
@@ -30,38 +49,6 @@
                         </div>
                     </div>
 
-                    @*<div class="col-12">
-                            <div asp-validation-summary="All" class="text-danger"></div>
-                            <input type="hidden" name="ChannelId" />
-                            <h4>Stream Announcer</h4>
-                            <div class="form-group">
-                                <label asp-for="ChannelId"></label>
-                                <select asp-for="ChannelId" asp-items="Model.Channels" id="channels" class="form-control"></select>
-                                <span asp-validation-for="ChannelId" class="text-danger"></span>
-                            </div>
-                            <div class="form-check form-group">
-                                <input asp-for="ChannelSettings.Enabled" class="form-check-input" />
-                                <label asp-for="ChannelSettings.Enabled" class="form-check-label"></label>
-                                <span asp-validation-for="ChannelSettings.Enabled" class="text-danger"></span>
-                            </div>
-                            <div class="form-check form-group">
-                                <input asp-for="ChannelSettings.RemoveMessages" class="form-check-input" />
-                                <label asp-for="ChannelSettings.RemoveMessages" class="form-check-label"></label>
-                                <span asp-validation-for="ChannelSettings.RemoveMessages" class="text-danger"></span>
-                            </div>
-
-                            <h4 class="mt-4">Streamer Role</h4>
-                            <div class="form-check form-group">
-                                <input asp-for="StreamerRoleEnabled" class="form-check-input" />
-                                <label asp-for="StreamerRoleEnabled" class="form-check-label"></label>
-                                <span asp-validation-for="StreamerRoleEnabled" class="text-danger"></span>
-                            </div>
-                            <div class="form-group">
-                                <label asp-for="RoleId"></label>
-                                <select asp-for="RoleId" asp-items="Model.Roles" id="roles" class="form-control"></select>
-                                <span asp-validation-for="RoleId" class="text-danger"></span>
-                            </div>
-                        </div>*@
                 </div>
 
                 <div class="row mt-4 border border-gray2 rounded">
@@ -172,18 +159,6 @@
                 return response;
             });
         };
-
-        @*$("#channels").on('change',
-            function() {
-                const channelId = $('#channels').val();
-                const guildId = '@Model.GuildId';
-
-                $.when(getChannelSettingsAnnouncer(guildId, channelId)).done(function(response) {
-                    $('#ChannelSettings_Enabled').prop('checked', response.enabled);
-                    $('#ChannelSettings_RemoveMessages').prop('checked', response.removeMessages);
-                });
-            });*@
-
         
         var selectChannelVal = '@Model.ChannelId';
         if (selectChannelVal == '0')
@@ -225,8 +200,6 @@
                         $('#rmEnabledBtn').prop('checked', response.removeMessages).parent().removeClass('active');
                         $('#rmDisabledBtn').prop('checked', !response.removeMessages).parent().addClass('active');
                     }
-
-                    console.log(response, 'changed');
                 });
 
                 $('input[name="ChannelId"]').val(e.value);
@@ -235,7 +208,7 @@
 
 
         var selectRoleVal = '@Model.RoleId';
-        if (selectRoleVal = '0')
+        if (selectRoleVal == '0')
             selectRoleVal = '@Model.Roles.FirstOrDefault().Value';
         $('#selectRole').dxSelectBox({
             dataSource: JSON.parse('@(Html.Raw(Json.Serialize(Model.Roles)))'),
