--- a/src/Volvox.Helios.Web/wwwroot/css/site.css
+++ b/src/Volvox.Helios.Web/wwwroot/css/site.css
@@ -478,12 +478,11 @@ input:checked + .slider {
 
 /******* Footer ********/
 .footer-icon {
-  width: 40px;
-  height: 40px;
+  padding: 10px;
   justify-content: center;
-  border: 2px solid var(--color-volvox);
   color: white;
-  transition: .5s;
+  transition: .3s;
+  font-size: 20px;
 }
 
   .footer-icon:hover {
@@ -506,6 +505,38 @@ input:checked + .slider {
 .dx-list-item.dx-state-active {
   background: var(--color-volvox) !important;
 }
+
+/*Sliding border*/
+.sliding-border{
+  position: relative;
+}
+  .sliding-border::after, .sliding-border::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    background: var(--color-volvox);
+    transition: all .3s;
+  }
+
+  .sliding-border::before {
+    height: 0;
+    width: 2px;
+    border-radius: .25rem 0 0 .25rem;
+  }
+
+  .sliding-border::after {
+    height: 2px;
+    width: 100%;
+    border-radius: .25rem .25rem 0 0;
+  }
+  .sliding-border.animate::after{
+    width: 0;
+  }
+
+  .sliding-border.animate::before {
+    height: 100%;
+  }
+
 
 /*******Cookie consent*****/
 #cookieConsent {
