--- a/src/Volvox.Helios.Web/Views/Poll/Index.cshtml
+++ b/src/Volvox.Helios.Web/Views/Poll/Index.cshtml
@@ -19,13 +19,13 @@
 
     <div class="col-12">
         <div class="row border border-gray2 rounded sliding-border ml-0 mr-0">
-            <div class="col-md-9 pt-3 pb-3">
+            <div class="col-md-9 col-10 pt-3 pb-3">
                 <h4 class="mb-0">Information and Instructions</h4>
             </div>
-            <div class="col-md-3 valign">
-                <div class="btn-group material-btn-group ml-md-auto mt-md-0 mt-3">
-                    <a href="#infoCollapse" class="text-light" data-toggle="collapse" data-animation="sliding-border" role="button" aria-expanded="false" aria-controls="infoCollapse">
-                        <i class="fas fa-info-circle" style="font-size: 20px;cursor:pointer;"></i>
+            <div class="col-md-3 col-2 valign">
+                <div class="btn-group material-btn-group ml-auto">
+                    <a href="#infoCollapse" class="info-btn" data-toggle="collapse" data-animation="sliding-border" role="button" aria-expanded="false" aria-controls="infoCollapse">
+                        <i class="fas fa-info-circle"></i>
                     </a>
                 </div>
             </div>
