Changing remembot title to dad module title

--- a/src/Volvox.Helios.Web/Views/Settings/DadSettings.cshtml
+++ b/src/Volvox.Helios.Web/Views/Settings/DadSettings.cshtml
@@ -11,7 +11,7 @@
 
     <div class="row border border-gray2 rounded">
         <div class="col-md-9 pt-3 pb-3">
-            <h4>Remembot Module</h4>
+            <h4>Dad Module</h4>
             <p class="mb-0 text-volvox">
                 Unleash the "dad" on your server. Messages that start with "I'm" will be met with a dad-like response.
             </p>
