--- a/src/Volvox.Helios.Web/Views/Moderation/_PunishmentRow.cshtml
+++ b/src/Volvox.Helios.Web/Views/Moderation/_PunishmentRow.cshtml
@@ -4,18 +4,14 @@
 }
 
 <!--
-****************************************************
-****************************************************
     TODO : Change Html to Tag Helpers
-****************************************************
-****************************************************
 -->
 
 <tr>
     @Html.HiddenFor(m => m.PunishmentId)
     <td>@Html.DropDownListFor(m => m.PunishType, Html.GetEnumSelectList<Volvox.Helios.Domain.Module.ModerationModule.Common.PunishType>())</td>
     <td><input type="number" asp-for="PunishDuration" value="0" min="0" step="1" max="2147483647" class="form-control" /></td>
-    <td>@Html.DropDownListFor(m => m.WarningType, Html.GetEnumSelectList<Volvox.Helios.Domain.Module.ModerationModule.Common.WarningType>())</td>
+    <td>@Html.DropDownListFor(m => m.WarningType, Html.GetEnumSelectList<Volvox.Helios.Domain.Module.ModerationModule.Common.FilterType>())</td>
     <td><input type="number" asp-for="WarningThreshold" value="1" min="1" step="1" max="2147483647" class="form-control" /></td>
     <td>
         <select asp-for="RoleId" asp-items="Model.Role"></select>
