--- a/src/Volvox.Helios.Web/Views/Settings/ChatTrackerSettings.cshtml
+++ b/src/Volvox.Helios.Web/Views/Settings/ChatTrackerSettings.cshtml
@@ -14,7 +14,7 @@
             </p>
         </div>
         <div class="col-md-3 valign">
-            <div class="btn-group material-btn-group ml-md-auto mt-md-0 mt-3 mr-3">
+            <div class="btn-group material-btn-group ml-md-auto mb-3 mb-md-0">
                 <label for="enabledBtn" class="btn pr-4 pl-4 module-enabler @(Model.Enabled ? "active" : "disabled")">
                     On
                     <input id="enabledBtn" type="radio" name="Enabled" class="d-none" value="true" @(Model.Enabled ? "checked" : "")>
