--- a/src/Volvox.Helios.Web/Views/Settings/StreamerSettings.cshtml
+++ b/src/Volvox.Helios.Web/Views/Settings/StreamerSettings.cshtml
@@ -18,7 +18,7 @@
                         </p>
                     </div>
                     <div class="col-md-3 valign">
-                        <div class="btn-group material-btn-group ml-md-auto mt-md-0 mt-3">
+                        <div class="btn-group material-btn-group ml-md-auto mb-3 mb-md-0">
                             <label for="enabledBtn" class="btn pr-4 pl-4 module-enabler @(Model.Enabled ? "active" : "disabled")">
                                 On
                                 <input id="enabledBtn" type="radio" name="Enabled" class="d-none" value="true" @(Model.Enabled ? "checked" : "")>
@@ -81,7 +81,7 @@
                         <span asp-validation-for="ChannelSettings.Enabled" class="text-danger"></span>
                     </div>
                     <div class="col-md-3 valign">
-                        <div class="btn-group material-btn-group ml-md-auto mt-md-0 mt-3">
+                        <div class="btn-group material-btn-group ml-md-auto mb-3 mb-md-0">
                             <label for="enabledChannelBtn" class="btn pr-4 pl-4 module-enabler @(Model.ChannelSettings.Enabled ? "active" : "disabled")">
                                 On
                                 <input id="enabledChannelBtn" type="radio" name="ChannelSettings.Enabled" class="d-none" value="true" @(Model.ChannelSettings.Enabled ? "checked" : "")>
@@ -101,7 +101,7 @@
                         <span asp-validation-for="ChannelSettings.RemoveMessages" class="text-danger"></span>
                     </div>
                     <div class="col-md-3 valign">
-                        <div class="btn-group material-btn-group ml-md-auto mt-md-0 mt-3">
+                        <div class="btn-group material-btn-group ml-md-auto mb-3 mb-md-0">
                             <label for="rmEnabledBtn" class="btn pr-4 pl-4 module-enabler @(Model.ChannelSettings.RemoveMessages ? "active" : "disabled")">
                                 On
                                 <input id="rmEnabledBtn" type="radio" name="ChannelSettings.RemoveMessages" class="d-none" value="true" @(Model.ChannelSettings.RemoveMessages ? "checked" : "")>
@@ -131,7 +131,7 @@
                         <span asp-validation-for="StreamerRoleEnabled" class="text-danger"></span>
                     </div>
                     <div class="col-md-3 valign">
-                        <div class="btn-group material-btn-group ml-md-auto mt-md-0 mt-3">
+                        <div class="btn-group material-btn-group ml-md-auto mb-3 mb-md-0">
                             <label for="roleEnabledBtn" class="btn pr-4 pl-4 module-enabler @(Model.StreamerRoleEnabled ? "active" : "disabled")">
                                 On
                                 <input id="roleEnabledBtn" type="radio" name="StreamerRoleEnabled" class="d-none" value="true" @(Model.StreamerRoleEnabled ? "checked" : "")>
