--- a/src/Volvox.Helios.Web/Views/Dashboard/Index.cshtml
+++ b/src/Volvox.Helios.Web/Views/Dashboard/Index.cshtml
@@ -10,11 +10,10 @@
     {
         var uG = Model.UserGuilds[i];
         <div class="card mt-4">
-            <div class="card-img-top d-flex align-items-center bg-gray pt-2 pb-2" id="s-@i-@uG.Guild.Name">
+            <div class="card-img-top d-flex align-items-center bg-gray pt-2 pb-2 dashboard-guild-header" id="s-@i-@uG.Guild.Name">
                 <img class="card-img-top ml-3 dashboard-guild-image" src="@uG.Guild.ImageUrl" alt="@uG.Guild.Name">
                 <h5 class="col mb-0 card-title text-volvox">@uG.Guild.Name</h5>
                 <a href="#" onclick="toggleAccBtn(event);" class="text-volvox mr-3" data-toggle="collapse" data-target="#s-@i" aria-expanded="true" aria-controls="s-@i">
-                    @*TODO: toggle icon if is favourite*@
                     <i class="fas fa-toggle-on d-block"></i>
                 </a>
                 @if (uG.Guild.Details.IsBotInGuild)
@@ -26,28 +25,6 @@
                         <i class="fas fa-cog"></i>
                     </a>
                 }
-                <!--<a href="#" class="text-volvox mr-2" dropdown-toggle data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    <i class="fas fa-ellipsis-h ml-auto mr-3"></i>
-                </a>
-                <div class="dropdown-menu">
-                    <a class="dropdown-item" href="#">
-                        <i class="fas fa-share mr-2"></i>
-                        Share
-                    </a>
-                    <a class="dropdown-item" href="#">
-                        <i class="fas fa-pen mr-2"></i>
-                        Edit
-                    </a>
-                    <a class="dropdown-item" href="#" onclick="toggleFavouriteBtn(event);">
-                        <i class="far fa-star mr-2"></i>
-                        Favorite
-                    </a>
-                    <div class="dropdown-divider"></div>
-                    <a class="dropdown-item text-danger" href="#">
-                        <i class="fas fa-trash-alt mr-2"></i>
-                        Delete
-                    </a>
-                </div>-->
             </div>
             <div class="collapse show" id="s-@i" aria-labelledby="s-@i-@uG.Guild.Name">
                 <div class="card-body">
@@ -62,6 +39,28 @@
 
 @section Scripts {
     <script>
+        var draggingCard = null;
+
+        $('body').mousemove((e) => {
+            if (draggingCard != null && $('.dashboard-guild-header').find(draggingCard).length > 0) {
+                draggingCard.closest('.card').offset({
+                    left: e.pageX - (draggingCard.width() / 2),
+                    top: e.pageY - (draggingCard.height() / 2)
+                }).css('zIndex', 1).addClass('dragging');
+            }
+        });
+
+        $('body').mousedown((e) => {
+            draggingCard = $(e.target);
+        }).mouseup((e) => {
+            $('.card:not(".dragging")').each((i, el) => {
+                if (draggingCard.offset().top > $(el).offset().top) {
+                    draggingCard.closest('.card').insertAfter($(el).closest('.card'));
+                }
+            });
+            $('.dashboard-guild-header').closest('.card').removeClass('dragging').css({ zIndex: 0 }).animate({ top: 0, left: 0}, 500);
+            draggingCard = null;
+        });
 
         function toggleAccBtn(e) {
             const el = $(e.target);
@@ -78,6 +77,5 @@
             else
                 el.removeClass('far').addClass('fas');
         }
-
     </script>
 }
