--- a/src/Volvox.Helios.Web/Views/Settings/DadSettings.cshtml
+++ b/src/Volvox.Helios.Web/Views/Settings/DadSettings.cshtml
@@ -33,10 +33,9 @@
         <div class="col-12 pt-3">
             <h4>Dad's Cooldown</h4>
             <p class="mb-0 text-volvox">
-                Is dad getting a little annoying? Tell him to cool it by increasing the frequency of how often he'll but in.
+                Is dad getting a little annoying? Tell him to cool it by increasing the frequency of how often he'll butt in.
             </p>
             <hr />
-            <label asp-for="ResponseCooldownMinutes"></label>
             <input type="hidden" id="responseCooldown" name="ResponseCooldownMinutes" />
             <div id="selectCooldownMinutes"></div>
             <span asp-validation-for="ResponseCooldownMinutes" class="text-danger"></span>
@@ -70,7 +69,7 @@
             },
             {
                 value: 5,
-                text: "5 Minnutes"
+                text: "5 Minutes"
             },
             {
                 value: 15,
