--- a/src/Volvox.Helios.Web/wwwroot/css/light-theme.css
+++ b/src/Volvox.Helios.Web/wwwroot/css/light-theme.css
@@ -4,6 +4,14 @@
   cursor: pointer;
 }
 
+#serverAccordion .card.animate {
+  box-shadow: 0 0 18px var(--color-deep-dark);
+}
+
+#serverAccordion .card.dragging {
+  box-shadow: 0 0 18px var(--color-gray2);
+}
+
 footer{
   background: #eee;
 }
