--- a/src/Volvox.Helios.Web/Views/Poll/Index.cshtml
+++ b/src/Volvox.Helios.Web/Views/Poll/Index.cshtml
@@ -4,11 +4,11 @@
 }
 
 <div class="row">
-    <div class="col-sm-11">
+    <div class="col-9">
         <h2>My Polls</h2>
     </div>
 
-    <div class="col-sm-1">
+    <div class="col-3">
         <button class="btn btn-volvox-outline" id="NewPoll">New</button>
     </div>
 </div>
