--- a/src/Volvox.Helios.Web/Views/Poll/NewPoll.cshtml
+++ b/src/Volvox.Helios.Web/Views/Poll/NewPoll.cshtml
@@ -15,9 +15,6 @@
                     <span asp-validation-for="ChannelId" class="text-danger"></span>
                     <input type="hidden" name="ChannelId"  />
                     <div id="channelSelect"></div>
-                    @*<label asp-for="ChannelId"></label>
-                <select asp-for="ChannelId" asp-items="Model.Channels" id="channels" class="form-control"></select>
-                <span asp-validation-for="ChannelId" class="text-danger"></span>*@
                 </div>
                 <div class="col-md-6">
                     <label asp-for="Title"></label> <br />
@@ -28,11 +25,11 @@
 
             <div class="options mt-3">
                 <div class="row">
-                    <label class="col-12">Option 1</label>
-                    <div class="col-md-11">
+                    <label class="col-12 ">Option 1</label>
+                    <div class="col-md-11 col-9">
                         <input name="options[0]" maxlength="100" type="text" class="form-control material-input" autocomplete="off" />
                     </div>
-                    <div class="col-md-1">
+                    <div class="col-md-1 col-3">
                         <button type="button" class="btn btn-volvox-outline rounded-circle d-block mx-auto" style="height: 40px;" onclick="addPollOption(event)">
                             <i class="fas fa-plus"></i>
                         </button>
@@ -84,10 +81,10 @@
                 $('.options').append(`
                 <div class="row mt-3">
                     <label class="col-12">Option ${options}</label>
-                    <div class="col-md-11">
+                    <div class="col-md-11 col-9">
                         <input name="options[${options - 1}]" maxlength="100" type="text" class="form-control material-input" autocomplete="off" />
                     </div>
-                    <div class="col-md-1">
+                    <div class="col-md-1 col-3">
                         <button type="button" class="btn btn-volvox-outline rounded-circle d-block mx-auto" style="height: 40px;" onclick="addPollOption(event)">
                             <i class="fas fa-plus"></i>
                         </button>
