--- a/src/Volvox.Helios.Web/Views/Settings/StreamerSettings.cshtml
+++ b/src/Volvox.Helios.Web/Views/Settings/StreamerSettings.cshtml
@@ -132,11 +132,11 @@
 
                 <div class="row border border-gray2 rounded mt-4">
                     <div class="col-12 pt-3 pb-3">
-                        <h4>Blacklist</h4>
+                        <h4>Whitelist</h4>
                         <p class="mb-0 text-volvox">
                             Add Roles to the blacklist
                         </p>
-                        <select class="d-none blacklist-items" multiple></select>
+                        <select asp-for="WhiteListedRoleIds" class="d-none blacklist-items" multiple></select>
                         <div id="blacklistTagBox" class="mt-3" style="overflow: hidden;"></div>
                     </div>
                 </div>
